force-app/main/default/objects/Daily_Routine__c/Daily_Routine__c.object-meta.xml
<CustomObject>
    <description>Daily wellness tracking for neurodivergent executive function support - tracks energy levels, mood, routine completion, and daily achievements</description>
    <label>Daily Routine</label>
    <nameField>
        <displayFormat>DR-{0000}</displayFormat>
        <label>Daily Routine Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Routines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>