force-app/main/default/objects/Daily_Routine__c/fields/Accomplished_Today__c.field-meta.xml
<CustomField>
    <fullName>Accomplished_Today__c</fullName>
    <description>What did you accomplish today? Celebrate your wins!</description>
    <inlineHelpText>List anything you accomplished today - big or small. Progress is progress!</inlineHelpText>
    <label>Accomplished Today</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>