force-app/main/default/objects/Daily_Routine__c/fields/Challenges__c.field-meta.xml
<CustomField>
    <fullName>Challenges__c</fullName>
    <description>What was challenging today? Track patterns and triggers.</description>
    <inlineHelpText>What made today difficult? Recognizing patterns helps you adapt.</inlineHelpText>
    <label>Challenges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>