force-app/main/default/objects/Daily_Routine__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date of this daily routine entry</description>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>