force-app/main/default/objects/Daily_Routine__c/fields/Energy_Level_Afternoon__c.field-meta.xml
<CustomField>
    <fullName>Energy_Level_Afternoon__c</fullName>
    <description>Energy level in the afternoon (1-10 scale)</description>
    <inlineHelpText>How is your energy around 2-3 PM? (1-10)</inlineHelpText>
    <label>Energy Level (Afternoon)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>