force-app/main/default/objects/Daily_Routine__c/fields/Energy_Level_Morning__c.field-meta.xml
<CustomField>
    <fullName>Energy_Level_Morning__c</fullName>
    <description>Energy level upon waking (1-10 scale). Used to adapt daily schedule recommendations.</description>
    <inlineHelpText>Rate your energy level when you wake up: 1-2 = Flare-up, 3-4 = Low, 5-7 = Medium, 8-10 = High</inlineHelpText>
    <label>Energy Level (Morning)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>