force-app/main/default/objects/Daily_Routine__c/fields/Exercise_Completed__c.field-meta.xml
<CustomField>
    <fullName>Exercise_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did you do any movement or exercise today?</description>
    <label>Exercise Completed</label>
    <type>Checkbox</type>
</CustomField>