force-app/main/default/objects/Daily_Routine__c/fields/Exercise_Type__c.field-meta.xml
<CustomField>
    <fullName>Exercise_Type__c</fullName>
    <description>What type of exercise or movement did you do?</description>
    <inlineHelpText>Example: 20 min yoga, Dog walk, Stretching</inlineHelpText>
    <label>Exercise Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>