force-app/main/default/objects/Daily_Routine__c/fields/Gratitude__c.field-meta.xml
<CustomField>
    <fullName>Gratitude__c</fullName>
    <description>3-5 things you are grateful for today</description>
    <inlineHelpText>What are you grateful for today? (3-5 things)</inlineHelpText>
    <label>Gratitude</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>