force-app/main/default/objects/Daily_Routine__c/fields/Journal_Entry__c.field-meta.xml
<CustomField>
    <fullName>Journal_Entry__c</fullName>
    <label>Journal Entry</label>
    <description>Daily journal entry text for reflection and win tracking</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>