force-app/main/default/objects/Daily_Routine__c/fields/Mood__c.field-meta.xml
<CustomField>
    <fullName>Mood__c</fullName>
    <description>Overall mood for the day</description>
    <inlineHelpText>How are you feeling overall today?</inlineHelpText>
    <label>Mood</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Great</fullName>
                <label>😊 Great</label>
            </value>
            <value>
                <fullName>Good</fullName>
                <label>🙂 Good</label>
            </value>
            <value>
                <fullName>Okay</fullName>
                <label>😐 Okay</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <label>😟 Low</label>
            </value>
            <value>
                <fullName>Very Low</fullName>
                <label>😢 Very Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>