force-app/main/default/objects/Daily_Routine__c/fields/Morning_Routine_Complete__c.field-meta.xml
<CustomField>
    <fullName>Morning_Routine_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did you complete your morning wellness routine today?</description>
    <inlineHelpText>Check this if you completed your slow wake-up, family care, and mindfulness routine</inlineHelpText>
    <label>Morning Routine Complete</label>
    <type>Checkbox</type>
</CustomField>