force-app/main/default/objects/Daily_Routine__c/fields/Stress_Level__c.field-meta.xml
<CustomField>
    <fullName>Stress_Level__c</fullName>
    <description>Stress level for the day</description>
    <inlineHelpText>How stressed are you feeling today?</inlineHelpText>
    <label>Stress Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calm</fullName>
            </value>
            <value>
                <fullName>Mild</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Overwhelmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>