force-app/main/default/objects/Daily_Routine__c/fields/Tomorrow_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Tomorrow_Priorities__c</fullName>
    <description>Top 3 priorities for tomorrow</description>
    <inlineHelpText>What are your top 3 priorities for tomorrow?</inlineHelpText>
    <label>Tomorrow&apos;s Priorities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>