force-app/main/default/objects/Daily_Routine__c/fields/Water_Intake__c.field-meta.xml
<CustomField>
    <fullName>Water_Intake__c</fullName>
    <description>Number of glasses of water consumed today (goal: 8)</description>
    <inlineHelpText>How many glasses (8oz) of water did you drink? Goal: 8 per day</inlineHelpText>
    <label>Water Intake (glasses)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>