force-app/main/default/objects/Daily_Routine__c/validationRules/Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Not_Future</fullName>
    <active>true</active>
    <description>Prevents creating daily routines for future dates</description>
    <errorConditionFormula>Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Cannot create a daily routine for a future date. Daily routines can only be created for today or past dates.</errorMessage>
</ValidationRule>