force-app/main/default/objects/Daily_Routine__c/validationRules/Water_Intake_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Water_Intake_Range</fullName>
    <active>true</active>
    <description>Ensures water intake is a reasonable number (0-20 glasses)</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Water_Intake__c)),
  OR(Water_Intake__c &lt; 0, Water_Intake__c &gt; 20)
)</errorConditionFormula>
    <errorDisplayField>Water_Intake__c</errorDisplayField>
    <errorMessage>Water intake must be between 0 and 20 glasses</errorMessage>
</ValidationRule>