force-app/main/default/objects/Daily_Routine__c/listViews/All_Daily_Routines.listView-meta.xml
<ListView>
    <fullName>All_Daily_Routines</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Energy_Level_Morning__c</columns>
    <columns>Mood__c</columns>
    <columns>Morning_Routine_Complete__c</columns>
    <columns>Exercise_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Daily Routines</label>
</ListView>