force-app/main/default/objects/Daily_Routine__c/listViews/This_Week.listView-meta.xml
<ListView>
    <fullName>This_Week</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Energy_Level_Morning__c</columns>
    <columns>Mood__c</columns>
    <columns>Stress_Level__c</columns>
    <columns>Morning_Routine_Complete__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week</label>
</ListView>